--- a/src/app.css
+++ b/src/app.css
@@ -55,7 +55,7 @@ li.done {
 }
 
 li.in-progres {
-  color: rgb(255, 0, 0);
+  color: blue;
 }
 
 .todo-item button {
@@ -111,6 +111,11 @@ li.in-progres {
   margin-left: 1em;
 }
 
+.search button.active {
+  border: 2px solid blue;
+  color: blue;
+}
+
 .auth button {
   text-align: center;
   font-size: medium;
@@ -136,4 +141,29 @@ li.in-progres {
 .login input {
   display: block;
   margin: 1rem auto;
+}
+
+@media screen and (orientation: portrait) {
+  .todo-app {
+    width: 100%;
+  }
+  .auth button {
+    height: 3rem;
+    border-radius: 1.5rem;
+  }
+  .auth input {
+    box-sizing: border-box;
+    width: 100%;
+    height: 3rem;
+    border-radius: 1.5rem;
+  }
+  .search input {
+    width: 47%;
+  }
+  .todo-item button {
+    width: 2.9rem;
+  }
+  .add-todo input {
+    width: 80%;
+  }
 }
